tests/errors/parsing/009_missing_type_specifier.c
int main(void) {
    const a;
}