tests/errors/parsing/009_missing_type_specifier.c.expect
./tests/errors/parsing/009_missing_type_specifier.c:2:11: error: missing type specifier
1 | int main(void) {
2 |     const a;
              ^
3 | }
